--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongodb-use-objectid",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Replace string ids with objectId. Works for single string ids, simple document objects and deep document objects containg arrays as well",
   "main": "lib/mongodb-use-objectid.js",
   "scripts": {
@@ -25,7 +25,8 @@
   },
   "homepage": "https://github.com/ewngs/mongodb-use-objectid#readme",
   "dependencies": {
-    "bson": "^0.4.11"
+    "bson": "^0.4.11",
+    "clone": "^1.0.2"
   },
   "devDependencies": {
     "tap-spec": "^4.0.2",
